--- a/DistributedProcessing/PartitionerAdm/PartitionerAdm.fsproj
+++ b/DistributedProcessing/PartitionerAdm/PartitionerAdm.fsproj
@@ -38,10 +38,9 @@
     <Compile Include="CommandLine.fs" />
     <Compile Include="..\Core\DataAccess.fs" Link="DataAccess.fs" />
     <Compile Include="..\Core\Proxy.fs" Link="Proxy.fs" />
+    <Compile Include="Implementation.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
-
-  <ItemGroup />
 
   <ItemGroup>
     <ProjectReference Include="..\..\Messaging\Messaging.fsproj" />
