--- a/DistributedProcessing/ModelGenerator/ModelGenerator.fsproj
+++ b/DistributedProcessing/ModelGenerator/ModelGenerator.fsproj
@@ -28,16 +28,17 @@
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
-  <ItemGroup />
-
   <ItemGroup>
-    <Compile Include="Program.fs" />
     <None Include="..\..\README.md" Link="README.md" Pack="true" PackagePath="\">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <Content Include="..\PartitionerService\appsettings.json" Link="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Compile Include="Primitives.fs" />
+    <Compile Include="..\Core\Proxy.fs" Link="Proxy.fs" />
+    <Compile Include="..\Core\DataAccess.fs" Link="DataAccess.fs" />
+    <Compile Include="Program.fs" />
   </ItemGroup>
 
   <ItemGroup>
