--- a/Samples/DistrProc/SolverRunner/SolverRunner.fsproj
+++ b/Samples/DistrProc/SolverRunner/SolverRunner.fsproj
@@ -33,6 +33,7 @@
     <ItemGroup>
       <ProjectReference Include="..\..\..\DistributedProcessing\Core\Core.fsproj" />
       <ProjectReference Include="..\..\..\DistributedProcessing\SolverRunner\SolverRunner.fsproj" />
+      <ProjectReference Include="..\Core\Core.fsproj" />
     </ItemGroup>
 
 </Project>
