--- a/Samples/DistrProc/Core/Core.fsproj
+++ b/Samples/DistrProc/Core/Core.fsproj
@@ -1,10 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <TargetFramework>net8.0</TargetFramework>
         <Platforms>x64</Platforms>
-        <AssemblyName>ModelGenerator</AssemblyName>
+        <AssemblyName>Core</AssemblyName>
         <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     </PropertyGroup>
 
@@ -19,18 +18,15 @@
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
-    <ItemGroup>
-        <Content Include="..\..\..\DistributedProcessing\PartitionerService\appsettings.json" Link="appsettings.json">
-          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </Content>
-        <Compile Include="Program.fs" />
-    </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Primitives.fs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\DistributedProcessing\Core\Core.fsproj" />
+  </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.1" />
-      <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="8.0.1" />
-      <ProjectReference Include="..\..\..\DistributedProcessing\ModelGenerator\ModelGenerator.fsproj" />
-      <ProjectReference Include="..\Core\Core.fsproj" />
       <PackageReference Update="FSharp.Core" Version="8.0.401" />
     </ItemGroup>
 
