--- a/Sys/Sys.fsproj
+++ b/Sys/Sys.fsproj
@@ -52,6 +52,7 @@
     <Compile Include="AppSettings.fs" />
     <Compile Include="DynamicSql.fs" />
     <Compile Include="DataAccess.fs" />
+    <Compile Include="FileSystemTypes.fs" />
     <Compile Include="Wolfram.fs" />
   </ItemGroup>
 
