--- a/Samples/DistrProc/ModelGenerator/ModelGenerator.fsproj
+++ b/Samples/DistrProc/ModelGenerator/ModelGenerator.fsproj
@@ -23,6 +23,7 @@
         <Content Include="..\..\..\DistributedProcessing\PartitionerService\appsettings.json" Link="appsettings.json">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
+        <Compile Include="CommandLine.fs" />
         <Compile Include="Program.fs" />
     </ItemGroup>
 
