--- a/DistributedProcessing/PartitionerAdm/PartitionerAdm.fsproj
+++ b/DistributedProcessing/PartitionerAdm/PartitionerAdm.fsproj
@@ -33,7 +33,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <Content Include="..\PartitionerService\appsettings.json" Link="appsettings.json" />
-    <Compile Include="Primitives.fs" />
+    <Compile Include="..\Core\Primitives.fs" Link="Primitives.fs" />
     <Compile Include="..\Core\AppSettings.fs" Link="AppSettings.fs" />
     <Compile Include="CommandLine.fs" />
     <Compile Include="..\Core\DataAccess.fs" Link="DataAccess.fs" />
