--- a/Samples/DistrProc/SolverRunner/SolverRunner.fsproj
+++ b/Samples/DistrProc/SolverRunner/SolverRunner.fsproj
@@ -20,15 +20,24 @@
   </PropertyGroup>
 
     <ItemGroup>
+        <None Include="..\..\..\..\..\Program Files\Wolfram Research\Mathematica\13.0\SystemFiles\Links\MathLink\DeveloperKit\Windows\SystemAdditions\ml32i4.dll" Link="ml32i4.dll">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Include="..\..\..\..\..\Program Files\Wolfram Research\Mathematica\13.0\SystemFiles\Links\MathLink\DeveloperKit\Windows-x86-64\SystemAdditions\ml64i4.dll" Link="ml64i4.dll">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
         <Content Include="..\..\..\DistributedProcessing\WorkerNodeService\appsettings.json" Link="appsettings.json">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
         <Compile Include="Program.fs" />
     </ItemGroup>
 
+    <ItemGroup />
+
     <ItemGroup>
       <PackageReference Include="Plotly.NET" Version="5.1.0" />
       <PackageReference Include="Plotly.NET.ImageExport" Version="6.1.0" />
+      <PackageReference Include="Wolfram.NETLink" Version="1.7.1" />
     </ItemGroup>
 
     <ItemGroup>
