--- a/DistributedProcessing/WorkerNodeService/appsettings.json
+++ b/DistributedProcessing/WorkerNodeService/appsettings.json
@@ -9,7 +9,8 @@
     "WorkerNodeName": "TEST",
     "WorkerNodeServiceAccessInfo": "NetTcpServiceInfo|netTcpServiceAddress=127.0.0.1;netTcpServicePort=45004;netTcpServiceName=MessagingNetTcpService;netTcpSecurityMode=NoSecurity",
     "ResultLocation": "C:\\Results",
-    "SolverLocation": "C:\\Solvers"
+    "SolverLocation": "C:\\Solvers",
+    "SolverOutputLocation": "C:\\Temp"
   },
   "connectionStrings": {
     "WorkerNodeService": "Data Source=localhost;Initial Catalog=wns803_01;Integrated Security=SSPI;Max Pool Size=20000;Connection Timeout=60;TrustServerCertificate=yes;",
