--- a/DistributedProcessing/WorkerNodeService/appsettings.json
+++ b/DistributedProcessing/WorkerNodeService/appsettings.json
@@ -8,12 +8,13 @@
     "WorkerNodeId": "{8ACF252B-4AEE-40CB-BEB1-1FD162BC3907}",
     "WorkerNodeName": "TEST",
     "WorkerNodeServiceAccessInfo": "NetTcpServiceInfo|netTcpServiceAddress=127.0.0.1;netTcpServicePort=45004;netTcpServiceName=MessagingNetTcpService;netTcpSecurityMode=NoSecurity",
-    "ResultLocation": "C:\\Results",
-    "SolverLocation": "C:\\Solvers",
-    "SolverOutputLocation": "C:\\Temp"
+    "ResultLocation": "C:\\WorkerNode\\Results",
+    "SolverLocation": "C:\\WorkerNode\\Solvers",
+    "SolverOutputLocation": "C:\\WorkerNode\\Temp",
+    "FileStorageLocation": "C:\\WorkerNode\\FileStorage"
   },
   "connectionStrings": {
-    "WorkerNodeService": "Data Source=localhost;Initial Catalog=wns803_01;Integrated Security=SSPI;Max Pool Size=20000;Connection Timeout=60;TrustServerCertificate=yes;",
-    "MessagingService": "Data Source=localhost;Initial Catalog=wns803_01;Integrated Security=SSPI;Max Pool Size=20000;Connection Timeout=60;TrustServerCertificate=yes;"
+    "WorkerNodeService": "Data Source=localhost;Initial Catalog=wns803_01;Integrated Security=SSPI;Max Pool Size=20000;Connection Timeout=360;TrustServerCertificate=yes;",
+    "MessagingService": "Data Source=localhost;Initial Catalog=wns803_01;Integrated Security=SSPI;Max Pool Size=20000;Connection Timeout=360;TrustServerCertificate=yes;"
   }
 }
