--- a/DistributedProcessing/PartitionerService/appsettings.json
+++ b/DistributedProcessing/PartitionerService/appsettings.json
@@ -3,6 +3,7 @@
     "MessagingServiceAccessInfo": "NetTcpServiceInfo|netTcpServiceAddress=127.0.0.1;netTcpServicePort=45000;netTcpServiceName=MessagingNetTcpService;netTcpSecurityMode=NoSecurity",
     "PartitionerId": "{F941F87C-BEBC-43E7-ABD3-967E377CBD57}",
     "PartitionerServiceAccessInfo": "NetTcpServiceInfo|netTcpServiceAddress=127.0.0.1;netTcpServicePort=45002;netTcpServiceName=MessagingNetTcpService;netTcpSecurityMode=NoSecurity",
+    "SolverEncryption": "AES",
     "ResultLocation": "C:\\Results"
   },
   "connectionStrings": {
