--- a/DistributedProcessing/WorkerNodeService/appsettings.json
+++ b/DistributedProcessing/WorkerNodeService/appsettings.json
@@ -8,7 +8,7 @@
     "WorkerNodeId": "{8ACF252B-4AEE-40CB-BEB1-1FD162BC3907}",
     "WorkerNodeName": "TEST",
     "WorkerNodeServiceAccessInfo": "NetTcpServiceInfo|netTcpServiceAddress=127.0.0.1;netTcpServicePort=45004;netTcpServiceName=MessagingNetTcpService;netTcpSecurityMode=NoSecurity",
-    "SolverEncryption": "AES",
+    "SolverEncryption": "RSA",
     "ResultLocation": "C:\\WorkerNode\\Results",
     "SolverLocation": "C:\\WorkerNode\\Solvers",
     "SolverOutputLocation": "C:\\WorkerNode\\Temp",
