--- a/DistributedProcessing/PartitionerService/appsettings.json
+++ b/DistributedProcessing/PartitionerService/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "Logging": {
+    "LogLevel": {
+      "Default": "Trace",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
   "appSettings": {
     "MessagingServiceAccessInfo": "NetTcpServiceInfo|netTcpServiceAddress=127.0.0.1;netTcpServicePort=45000;netTcpServiceName=MessagingNetTcpService;netTcpSecurityMode=NoSecurity",
     "PartitionerId": "{F941F87C-BEBC-43E7-ABD3-967E377CBD57}",
