--- a/log4net.config
+++ b/log4net.config
@@ -10,7 +10,7 @@
     </layout>
   </appender>
   <root>
-    <level value="INFO" />
+    <level value="ALL" />
     <appender-ref ref="RollingFileAppender" />
   </root>
 </log4net>
