--- a/DistributedProcessing/WorkerNodeService/appsettings.json
+++ b/DistributedProcessing/WorkerNodeService/appsettings.json
@@ -2,11 +2,13 @@
   "Logging": {
     "LogLevel": {
       "Default": "Trace",
+      "CoreWCF": "Warning",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "appSettings": {
+    "ProjectName": "WNS",
     "IsInactive": "False",
     "MessagingServiceAccessInfo": "NetTcpServiceInfo|netTcpServiceAddress=127.0.0.1;netTcpServicePort=45000;netTcpServiceName=MessagingNetTcpService;netTcpSecurityMode=NoSecurity",
     "NodePriority": "100",
