--- a/DistributedProcessing/MessagingService/appsettings.json
+++ b/DistributedProcessing/MessagingService/appsettings.json
@@ -2,11 +2,13 @@
   "Logging": {
     "LogLevel": {
       "Default": "Trace",
+      "CoreWCF": "Warning",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "appSettings": {
+    "ProjectName": "MSG",
     "ExpirationTimeInMinutes": "5",
     "MessagingServiceAccessInfo": "NetTcpServiceInfo|netTcpServiceAddress=127.0.0.1;netTcpServicePort=45000;netTcpServiceName=MessagingNetTcpService;netTcpSecurityMode=NoSecurity"
   },
