--- a/log4net.config
+++ b/log4net.config
@@ -1,16 +1,16 @@
 <log4net>
   <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
-    <file type="log4net.Util.PatternString" value="C:\Logs\%property{ProjectName}\log" />
+    <file type="log4net.Util.PatternString" value="C:\Logs\%property{ProjectName}\" />
     <appendToFile value="true" />
     <rollingStyle value="Date" />
-    <datePattern value="'-'yyyy-MM-dd'.log'" />
+    <datePattern value="yyyy-MM-dd'.log'" />
     <staticLogFileName value="false" />
     <layout type="log4net.Layout.PatternLayout">
-      <conversionPattern value="%date [%thread] %-5level %logger - %message%newline" />
+      <!-- conversionPattern value="# %date{yyyy-MM-dd HH:mm:ss.fff} # %-5level # %-30method # %message %newline%newline" / -->
+      <conversionPattern value="# %date{yyyy-MM-dd HH:mm:ss.fff} # %-5level # %message %newline%newline" />
     </layout>
   </appender>
   <root>
-    <!-- Log everything -->
     <level value="ALL" />
     <appender-ref ref="RollingFileAppender" />
   </root>
