--- a/Sys/Sys.fsproj
+++ b/Sys/Sys.fsproj
@@ -22,13 +22,13 @@
         <PlatformTarget>x64</PlatformTarget>
         <DefineConstants>DEBUG</DefineConstants>
         <OtherFlags>--warnaserror+:25 --platform:x64</OtherFlags>
-        <NoWarn>NU5100;NU5110;NU5111</NoWarn>
+        <NoWarn>NU5100;NU5110;NU5111;NU1903</NoWarn>
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
         <OtherFlags>--warnaserror+:25 --platform:x64</OtherFlags>
         <PlatformTarget>x64</PlatformTarget>
-        <NoWarn>NU5100;NU5110;NU5111</NoWarn>
+        <NoWarn>NU5100;NU5110;NU5111;NU1903</NoWarn>
     </PropertyGroup>
 
     <ItemGroup>
@@ -47,6 +47,7 @@
         <Compile Include="Primitives.fs" />
         <Compile Include="Errors.fs" />
         <Compile Include="Logging.fs" />
+        <Compile Include="WindowsApi.fs" />
         <Compile Include="Core.fs" />
         <Compile Include="Rop.fs" />
         <Compile Include="Retry.fs" />
