--- a/DistributedProcessing/WorkerNodeService/appsettings.json
+++ b/DistributedProcessing/WorkerNodeService/appsettings.json
@@ -22,6 +22,7 @@
     "SolverLocation": "C:\\WorkerNode\\Solvers",
     "SolverOutputLocation": "C:\\WorkerNode\\Temp",
     "FileStorageLocation": "C:\\WorkerNode\\FileStorage",
+    "LastErrMinAgo": "1.0",
     "MathKernelFileName": "C:\\Program Files\\Wolfram Research\\Wolfram\\14.1\\math.exe",
     "UseMathLink": "False",
     "WolframInput": "C:\\WorkerNode\\Wolfram\\Input\\",
