--- a/MathTests/MathTests.fsproj
+++ b/MathTests/MathTests.fsproj
@@ -31,6 +31,7 @@
         <Compile Include="MatrixComparisonTests.fs" />
         <Compile Include="TridiagonalMatrixTests.fs" />
         <Compile Include="PoissonEvolutionTests.fs" />
+        <Compile Include="CoordTests.fs" />
         <Compile Include="Program.fs" />
     </ItemGroup>
 
