--- a/Math/Math.fsproj
+++ b/Math/Math.fsproj
@@ -45,6 +45,7 @@
         <Compile Include="Sparse.fs" />
         <Compile Include="Tridiagonal.fs" />
         <Compile Include="Stats.fs" />
+        <Compile Include="Models.fs" />
     </ItemGroup>
 
     <ItemGroup>
