--- a/MathTests/MathTests.fsproj
+++ b/MathTests/MathTests.fsproj
@@ -36,7 +36,8 @@
         <Compile Include="MeanStdDevTests.fs" />
         <Compile Include="MultiplierTests.fs" />
         <Compile Include="TypeTests.fs" />
-        <Compile Include="ModelPerformanceTests.fs" />
+        <Compile Include="Model2DPerformanceTests.fs" />
+        <Compile Include="Model3DPerformanceTests.fs" />
         <Compile Include="Program.fs" />
     </ItemGroup>
 
