--- a/Math/Math.fsproj
+++ b/Math/Math.fsproj
@@ -45,6 +45,7 @@
         <Compile Include="Sparse.fs" />
         <Compile Include="Sparse2.fs" />
         <Compile Include="Tridiagonal.fs" />
+        <Compile Include="Tridiagonal2.fs" />
         <Compile Include="Evolution.fs" />
         <Compile Include="Models.fs" />
     </ItemGroup>
